--- a/src/Translations/default.po
+++ b/src/Translations/default.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Nemp 3.1\n"
 "POT-Creation-Date: 2011-03-26 20:39\n"
-"PO-Revision-Date: 2011-03-26 21:14+0100\n"
+"PO-Revision-Date: 2011-05-06 21:45+0100\n"
 "Last-Translator: Daniel Gaußmann <mail@gausi.de>\n"
 "Language-Team: Daniel Gaußmann <Mail@Gausi.de>\n"
 "MIME-Version: 1.0\n"
@@ -9170,7 +9170,7 @@ msgid ""
 msgstr ""
 "Falls sie eine Logitech G15 Tastatur haben, kann Nemp auf dem Display den aktuellen Titel (und einiges mehr) anzeigen.\n"
 "\n"
-"Andere Tastaturen können theoretisch auch unterstützt werden. Da ich selbst aber nur eine G15 habe, kann ich nur das nur dafür testen.\n"
+"Andere Tastaturen können theoretisch auch unterstützt werden. Da ich selbst aber nur eine G15 habe, kann ich das nur dafür testen.\n"
 "Wenn Sie eine App für Ihre Tastatur erstellen wollen, kontaktieren Sie mich bitte.\n"
 "\n"
 "Also, wollen Sie jetzt die G15-App starten?"
